--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="de">
+<html lang="en">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,7 +15,6 @@
 </head>
 <body>
 
-<!-- Überschrift -->
 <h1>AI Job Salary vs Experience Scatter Plot</h1>
 
 <div id="controls">
